tests/ui/specialization/default-associated-type-bound-1.stderr
error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/default-associated-type-bound-1.rs:17:22
   |
LL |     default type U = str;
   |                      ^^^ the trait `Clone` is not implemented for `str`
   |
help: the trait `Clone` is implemented for `String`
  --> $SRC_DIR/alloc/src/string.rs:LL:COL
note: required by a bound in `X::U`
  --> $DIR/default-associated-type-bound-1.rs:7:13
   |
LL |     type U: Clone;
   |             ^^^^^ required by this bound in `X::U`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
